--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 }
 body{
     background-color:#4a4e4a;
+    background-image: url("images/bg.jpg");
     display: flex;
     justify-content: center;
     align-items: center;
@@ -26,7 +27,7 @@ body{
 .box::before{
     content: '';
     position:absolute;
-    /* top: -100%; */
+
     bottom:10%;
     right: 50%;
     width: 480px;
@@ -38,7 +39,6 @@ body{
 .box::after{
     content: '';
     position:absolute;
-    /* top: -100%; */
     bottom: 10%;
     right: 50%;
     width: 480px;
@@ -62,4 +62,101 @@ body{
     inset:6px;
     border-radius: 24px;
     background-color: #232423;
+    padding: 200px 155px;
+    display:flex;
+    flex-direction: column;
+    color:rgb(255, 255, 255);
+    padding-top: 100px;
+}
+.form h2{
+    color:#45f3ff;
+    font-weight: 500;
+    text-align: center;
+    letter-spacing: 0.1em;
+    padding-bottom: 1px;
+}
+.inputBox{
+    position: relative;
+    width: 300px;
+    padding: 20px 10px 10px;
+    padding-bottom: 40px;
+}
+.links-color{
+    color: #ffa6a0;
+}
+.inputBox input{
+    position: relative;
+    width: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    color: #23242a;
+    font-size: 1em;
+    letter-spacing: 0.05em;
+    z-index: 10;
+}
+.inputBox span{
+    position:absolute;
+    left: 0;
+    padding:0px 0px 10px;
+    font-size: 1em;
+    color: #8f8f8f;
+    pointer-events: none;
+    letter-spacing: 0.05em;
+    transition: 0.5s;
+}
+.inputBox input:valid ~ span,
+.inputBox input:focus ~ span{
+    color: #45f3ff;
+    transform: translateX(0px) translateY(-30px);
+    font-size:0.9em;
+}
+.inputBox i{
+    position: absolute;
+    left:0;
+    bottom:30px;
+    width:100%;
+    height: 2px;
+    background:#45f3ff;
+    border-radius: 3px;
+    transition: 0.5s;
+    pointer-events: none;
+}
+.links{
+    display: flex;
+    justify-content: space-between;
+}
+.links a{
+    margin:10px 0;
+    font-size: 0.75em;
+    color:#8f8f8f;
+    margin:-5px 0;
+    text-decoration: underline;
+
+}
+.inputBox input:valid ~ i,
+.inputBox input:focus ~ i{
+    height: 40px;
+}
+.links a:hover{
+    color: #45f3ff;
+}
+
+
+d1{
+    padding-bottom: 20px;
+}
+input[type="submit"]{
+    border: none;
+    outline: none;
+    background-color: #45f3ff;
+    padding: 11px 25px;
+    width: 100px;
+    margin-top: 10px;
+    border-radius: 4px;
+    font-weight: 600;
+    cursor: pointer;
+}
+input[type="submit"]:active{
+    opacity: 0.7;
 }
